folia can use aikar flags