@@ -307,7 +307,23 @@ echo:
 echo:
 echo:
 echo       Folia (MC version 1.20.1) 下載完成
-echo java -Xmx4096M -Xms1024M -jar server.jar nogui> StartServer.bat
+:dfoliaed
+echo:
+echo       要使用 Aikar Flags 嗎?
+echo       這是一個在某些情況下可以讓伺服器效能提升的啟動參數
+echo       輸入1即使用，輸入2即使用預設啟動參數
+set puachoice=
+set /p puachoice=       請輸入您的選擇：
+if '%puachoice%'=='1' goto useaikarflag
+if '%puachoice%'=='2' goto dontuseaikarflag
+echo       輸入錯誤，請再試一次
+goto dfoliaed
+
+:useaikarflag
+echo java -Xms4096M -Xmx4096M --add-modules=jdk.incubator.vector -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -jar server.jar --nogui> StartServer.bat
+goto ngrok
+:dontuseaikarflag
+echo java -Xmx4096M -Xms1024M -jar server.jar nogui >> StartServer.bat
 goto ngrok
 
 :dbungeecord
